<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backall"
    android:gravity="center"
    android:layout_margin="5dp"
    android:padding="5dp"
    android:orientation="vertical"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <!--Header -->
    <LinearLayout

        android:layout_gravity="center|top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <!-- Welcome -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="2dp"
            android:background="@drawable/personal_title_bac"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/welcome"
            android:textColor="@color/white"
            android:textSize="25dp"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="3"
            android:shadowDy="3"
            android:shadowRadius="5"
            android:fontFamily="fantasy"/>
    </LinearLayout>
    <!-- End of Header -->


    <!-- content -->

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginBottom="55dp"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

                <ScrollView
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:scrollbarThumbVertical="@drawable/custom_scroll_style"
                    android:fadeScrollbars="false"
                    android:scrollbarSize="30dp"
                    android:scrollbarAlwaysDrawVerticalTrack="true"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideInset"
                    android:scrollbarFadeDuration="0"
                    android:background="@drawable/backlist">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:background="@drawable/backlist"
                    android:orientation="vertical">



                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/back_profile">
                    <ImageView
                        android:layout_width="280dp"
                        android:layout_height="150dp"
                        android:layout_margin="@dimen/buttonTxtSize"
                        android:layout_gravity="center"
                        android:src="@drawable/adam"/>


                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/backlist"
                    android:orientation="vertical">

                    <!-- username -->
                    <LinearLayout
                        android:layout_margin="@dimen/buttonTxtSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_username_password"
                        android:orientation="horizontal">


                        <TextView
                            android:padding="10dp"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/username"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:fontFamily="fantasy" />

                        <EditText
                            android:layout_margin="2dp"
                            android:padding="10dp"
                            android:id="@+id/username"
                            android:background="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textCapCharacters"
                            android:hint="@string/zouma"
                            android:textSize="20dp"
                            android:fontFamily="fantasy" />



                    </LinearLayout> <!-- username -->


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="10dp"
                        android:background="@color/blueLight"
                        />
                    <!-- password -->
                    <LinearLayout
                        android:layout_margin="@dimen/buttonTxtSize"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/back_username_password"
                        android:orientation="horizontal">


                        <TextView
                            android:padding="10dp"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:text="@string/password"
                            android:gravity="center"
                            android:textColor="@color/white"
                            android:textSize="20dp"
                            android:fontFamily="fantasy" />

                        <EditText
                            android:layout_margin="2dp"
                            android:padding="10dp"
                            android:id="@+id/password"
                            android:background="@color/white"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPassword"
                            android:hint="@string/adam"
                            android:textSize="20dp"
                            android:fontFamily="fantasy"/>

                    </LinearLayout> <!-- end password -->





                </LinearLayout>


                <TextView
                    android:id="@+id/info"
                    android:layout_margin="5dp"
                    android:background="@drawable/back_remaining_tries"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/red"
                    android:textSize="20dp"
                    android:shadowColor="@color/white"
                    android:shadowDx="3"
                    android:shadowDy="3"
                    android:shadowRadius="5"
                    android:textStyle="bold"
                    android:fontFamily="fantasy"/>
            <!-- End of content -->
                </LinearLayout>
            </ScrollView>
    </LinearLayout>
    <!-- End of content tag -->


    <!--Footer : Return Button -->

    <Button
        android:id="@+id/logIn"
        android:layout_gravity="center|bottom"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:textColor="@color/white"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="5"
        android:textSize="@dimen/buttonTxtSize"
        android:padding="@dimen/buttonPaddingSize"
        android:layout_marginBottom="10dp"
        android:background="@drawable/button_bac"
        android:fontFamily="fantasy"/>

    <!--End of Footer : Return Button -->


</FrameLayout>
